(lang dune 3.19)

(name zap)

(generate_opam_files true)

(source
 (github scheinheiser/zap))

(authors "scheinheiser")

(maintainers "scheinheiser")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name zap)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))
