(lang dune 3.19)

(name zap)

(generate_opam_files true)

(source
 (github scheinheiser/zap))

(authors "scheinheiser")

(maintainers "scheinheiser")

(license LICENSE)

(documentation https://github.com/scheinheiser/zap)

(package
 (name zap)
 (synopsis "a dependently-typed, functional language")
 (description "")
 (depends ocaml)
 (tags
  ()))
